--- a/index.html
+++ b/index.html
@@ -62,10 +62,10 @@
             </div>
 
             <div class="content">
-                <h3>my name is Metasebiyaw Asfaw and I am Full Stack (Mernstack) developer and UI/UX designer</h3>
-                <p>I'm a passionate, dedicated Full Stack web developer based in adama, ethiopia. 1+ years
-                     of experience with expertise in Full Stack technologies like HTML, CSS, JavaScript, & 
-                     React.JS, Node.JS, Express.JS, MongoDB and so on, as well as UI/UX design. Let's connect!</p>
+                <h3>my name is Metasebiyaw Asfaw and I am Full Stack Web and Mobile App developer, and UI/UX designer</h3>
+                <p>I'm a passionate, dedicated Full Stack web developer based in adama, ethiopia. 3+ years
+                     of experience with expertise in Full Stack technologies like HTML, CSS, JavaScript, Typescript & 
+                     React.JS, Next.js, ReactNative, Node.JS, Express.JS, MongoDB(NoSQL), MySQL and so on, as well as UI/UX design. Let's connect!</p>
                 <div class="box-container">
                     <div class="box">
                         <p> <span>age :</span> 20</p>
@@ -95,7 +95,7 @@
                     <div class="bar"><span></span></div>
                 </div>
                 <div class="progress">
-                    <h3>Frontend Dev (React.js, next.js & three.js)<span>85%</span></h3>
+                    <h3>Frontend Dev (React.js, ReactNative, Next.js & three.js)<span>85%</span></h3>
                     <div class="bar"><span></span></div>
                 </div>
                 <div class="progress">
@@ -107,7 +107,7 @@
                     <div class="bar"><span></span></div>
                 </div>
                 <div class="progress">
-                    <h3>Languages (python & JavaScript)<span>90%</span></h3>
+                    <h3>Languages (python, Typescript, JavaScript)<span>90%</span></h3>
                     <div class="bar"><span></span></div>
                 </div>
 
@@ -115,7 +115,7 @@
 
             <div class="box-container">
                 <div class="box">
-                    <h3> >> 2+</h3>
+                    <h3> >> 3+</h3>
                     <p>years of experience</p>
                 </div>
                 <div class="box">
@@ -143,6 +143,12 @@
                 <i class="fas fa-code"></i>
                 <h3>Full Stack Web Development</h3>
                 <p>creating and developing responsive websites and Backend APIs</p>
+            </div>
+
+            <div class="box">
+                <i class="fa-solid fa-mobile-screen-button"></i>
+                <h3>Mobile App Development</h3>
+                <p>building user-friendly and efficient mobile applications for both Android and iOS platforms</p>
             </div>
 
             <div class="box">
@@ -191,9 +197,9 @@
                 <div class="content">
                     <span>2022-present day</span><br>
                     <h4><i class="fa-solid fa-location-dot"></i> Adama</h4>
-                    <h3>universty</h3>
+                    <h3>university</h3>
                     <p>
-                        I am currently in my third year of studying Software Engineering at ASTU (Adama Science and Technology University).
+                        I am currently in my Fifth(Final) year of studying Software Engineering at ASTU (Adama Science and Technology University).
                          My time here has been incredibly enriching, as I've delved deep into various aspects of software development.
                           Being part of ASTU has not only provided me with a strong academic foundation but also opportunities to collaborate on different projects and learn from different peoples.
                     </p>
